Fixed flickering menu issue.

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body > div {
   transition: all 0.4s ease-in-out;
 }
 .menu:hover {
-  opacity: 1;
+  opacity: 0.9;
 }
 .setting {
   text-align: right;
